fix: basline align logo on the white area of the site (currently it's down 1 pixel) • 'Hot Topics' text should left align w/ 'News+Issues' text

--- a/drupal/profiles/takepart/themes/takepart3/css/style.css
+++ b/drupal/profiles/takepart/themes/takepart3/css/style.css
@@ -1272,7 +1272,7 @@ h1.title a:hover {
     padding-left: 0;
     padding-right: 10px;
     border: none;
-    margin-left: 15px;
+    margin-left: 9px;
 }
 
 .view-id-slide_rotator {
